[package]
name = "dtx"
version = "0.1.1"
rust-version = "1.74.0"
description = "service integration"
keywords = ["http"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["dlnest <dlnestmit@gamil.com>"]
homepage = "https://github.com/DL-NEST/dtx/blob/main/README.md"
repository = "https://github.com/DL-NEST/dtx.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
